...
            padding: const EdgeInsets.symmetric(horizontal: Sizes.size40),
            child: Column(
              children: [
                Gaps.v80,
                const Text(
                  // S.of(context).signUpTitle('TikTok'),
                  "Sign up for TikTok",
                  style: TextStyle(
                    fontSize: Sizes.size24,
                    fontWeight: FontWeight.w700,
                  ),
                ),
                Gaps.v20,
...
                  Row(
                    children: [
                      Expanded(
                          child: AuthButton(
                        icon: const FaIcon(FontAwesomeIcons.user),
                        // text: S.of(context).emailPasswordButton,
                        text: 'Use email & password',
                        onPressed: () => _onEmailTap(context),
                      )),
                      Gaps.h16,
                      Expanded(
                        child: AuthButton(
                          icon: const FaIcon(FontAwesomeIcons.apple),
...
