...
                  }
                },
              ),
              Gaps.v16,
              TextFormField(
                decoration: const InputDecoration(
                  hintText: 'Password',
                ),
                validator: (value) => null,
                onSaved: (newValue) {
                  if (newValue != null) {
                    formData['password'] = newValue;
                  }
...
